[package]
edition = "2021"
name = "tree-sitter-facade"
version = "0.9.2"
authors = ["<herringtondarkholme@users.noreply.github.com>"]
license = "Apache-2.0 WITH LLVM-exception"
readme = "README.md"
repository = "https://github.com/ast-grep/tree-sitter-facade"
description = """
A uniform interface for `tree-sitter` (rust) and `web-tree-sitter` (wasm-bindgen).
"""

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = "z"

[features]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tree-sitter = "0.20"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"
wasm-bindgen = { version = "0.2", features = ["strict-macro"] }
web-sys = { version = "0.3", features = ["console"] }
web-tree-sitter = { git = "https://github.com/tweag/web-tree-sitter-sys", package = "web-tree-sitter-sys", default-features = false, features = ["web"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-futures = "0.4"
wasm-bindgen-test = "0.3"

[workspace]
members = [".", "xtask"]
default-members = ["."]
